# sqlite-to-csv

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build.yml  release-please.yml  release.yml
src/python_package_template/: __init__.py  __main__.py
src/sqlite2csv/: __init__.py  __main__.py
src/sqlite2csv/lib/: __init__.py  pandas.py  sqlalchemy.py
src/sqlite_to_csv/: __init__.py  __main__.py
src/sqlite_to_csv/lib/: __init__.py  logger.py  sqlalchemy.py
tests/: test_init.py
