[project]
name = "sqlite-to-csv"
version = "0.1.0"
description = "Export data from a SQLite database to CSV files."
authors = [
    { name = "ryohidaka", email = "39184410+ryohidaka@users.noreply.github.com" }
]
dependencies = [
    "sqlalchemy>=2.0.31",
]
readme = "README.md"
requires-python = ">= 3.8"
license = {file = "LICENSE"}
keywords = []

[project.urls]
Homepage = "https://github.com/ryohidaka/sqlite-to-csv"
Repository = "https://github.com/ryohidaka/sqlite-to-csv"
Issues = "https://github.com/ryohidaka/sqlite-to-csv/issues"
Changelog = "https://github.com/ryohidaka/blob/main/sqlite-to-csv/CHANGELOG.md"

[project.scripts]
"sqlite-to-csv" = "sqlite_to_csv:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.4",
    "pytest>=8.2.0",
    "pre-commit>=3.7.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sqlite_to_csv"]
