[project]
name = "sqlite2csv"
version = "0.2.0"
description = "Export data from a SQLite database to CSV files."
authors = [
    { name = "ryohidaka", email = "39184410+ryohidaka@users.noreply.github.com" }
]
dependencies = [
    "sqlalchemy>=2.0.31",
    "pandas>=2.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"
license = {file = "LICENSE"}
keywords = ["csv","sqlite","conversion","copy","tool"]

[project.urls]
Homepage = "https://github.com/ryohidaka/sqlite2csv"
Repository = "https://github.com/ryohidaka/sqlite2csv"
Issues = "https://github.com/ryohidaka/sqlite2csv/issues"
Changelog = "https://github.com/ryohidaka/blob/main/sqlite2csv/CHANGELOG.md"

[project.scripts]
"sqlite2csv" = "sqlite2csv:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.4",
    "pytest>=8.2.0",
    "pre-commit>=3.7.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sqlite2csv"]
